Improve UI customization and env variable usage
Added functionality to allow users to select from multiple UI themes for enhanced personalization. Simplified and bolstered secure access of system parameters through environment variables via a new EnvDataProvider module. Also, integrated unit testing capabilities through inclusion of JUnit and Mockito dependencies, with the initial set of tests focusing on the new theme application feature. Aimed to improve user experience and code reliability.